feat: get API handle is deleted
