# internal/server/v1beta1/asset.go
@@ -67,6 +67,7 @@ func (server *APIServer) GetAllAssets(ctx context.Context, req *compassv1beta1.G
 		SortBy(req.GetSort()).
 		SortDirection(req.GetDirection()).
 		Data(req.GetData()).
+		IsDeleted(req.GetIsDeleted()).
 		Build()
 	if err != nil {
 		return nil, status.Error(codes.InvalidArgument, bodyParserErrorMsg(err))
