# proto/compass.swagger.yaml
@@ -94,6 +94,11 @@ paths:
           in: query
           required: false
           type: boolean
+        - name: is_deleted
+          description: filter by soft deletion flag assets
+          in: query
+          required: false
+          type: boolean
       tags:
         - Asset
     put:
@@ -2330,7 +2335,7 @@ definitions:
       `NullValue` is a singleton enumeration to represent the null value for the
       `Value` type union.
 
-       The JSON representation for `NullValue` is JSON `null`.
+      The JSON representation for `NullValue` is JSON `null`.
 
        - NULL_VALUE: Null value.
   PatchDiscussionResponse:
