# proto/gotocompany/compass/v1beta1/service.pb.validate.go
@@ -4196,6 +4196,8 @@ func (m *GetAllAssetsRequest) validate(all bool) error {
 
 	// no validation rules for WithTotal
 
+	// no validation rules for IsDeleted
+
 	if len(errors) > 0 {
 		return GetAllAssetsRequestMultiError(errors)
 	}
